# yzlite

./: .$YZLITE_Architecture.drawio.dtmp  .gitignore  CHANGELOG.md  CMakeLists.txt  DOCS_DISPLAY_ISSUE.md  LICENSE.md  README.md  YZLITE_Architecture.drawio  install_yzlite.py  pyrightconfig.json  pytest.ini  setup.py  setup_arm.py  test_evaluate.py  yzlite.code-workspace
cpp/shared/apps/audio_classifier/: CMakeLists.txt  README.md  app.c  app.h  audio_classifier.cc  audio_classifier.h  audio_classifier_config.cc  audio_classifier_config.h  audio_io.cc  audio_io.h  cli_opts.cc  cli_opts.hpp  main.c  recognize_commands.cc  recognize_commands.h  yzlite_audio_classifier.slcp
cpp/shared/apps/ble_audio_classifier/: CMakeLists.txt  README.md  app.c  app.h  ble_audio_classifier.cc  ble_audio_classifier.h  ble_audio_classifier_config.cc  ble_audio_classifier_config.h  bluetooth.c  gatt_db.c  gatt_db.h  main.c  recognize_commands.cc  recognize_commands.h  sl_gatt_service_device_information.c  yzlite_ble_audio_classifier.slcp
cpp/shared/apps/fingerprint_authenticator/: CMakeLists.txt  README.md  app_config.hpp  app_controller.cc  app_controller.hpp  data_preprocessor.cc  data_preprocessor.hpp  fingerprint_authenticator.cc  fingerprint_authenticator.hpp  fingerprint_vault.c  fingerprint_vault.h  main.cc  yzlite_fingerprint_authenticator.slcp
cpp/shared/apps/hello_world/: CMakeLists.txt  README.md  main.cc  yzlite_hello_world.slcp
cpp/shared/apps/image_classifier/: CMakeLists.txt  README.md  app.cc  image_classifier.cc  image_classifier.h  recognize_commands.cc  recognize_commands.h  yzlite_image_classifier.slcp
cpp/shared/apps/model_profiler/: CMakeLists.txt  README.md  cli_opts.cc  cli_opts.hpp  main.cc  yzlite_model_profiler.slcp
cpp/shared/arducam/: CMakeLists.txt
cpp/shared/arducam/arducam/: arducam.h  arducam_types.h
cpp/shared/cmsis/: CMakeLists.txt  cmsis_device.cmake  cmsis_dsp.cmake  cmsis_nn.cmake  cmsis_options.cmake  cmsis_rtos2.cmake  patch_cmsis_dsp.py
cpp/shared/cmsis/wrapper/: get_buffer_size.c  wrapper_build.cmake
cpp/shared/fingerprint_reader/: CMakeLists.txt
cpp/shared/fingerprint_reader/fingerprint_reader/: fingerprint_reader.c  fingerprint_reader.h  fingerprint_reader_config.h  fingerprint_reader_internal.h  r503_driver.c  r503_driver.h
cpp/shared/float16/: CMakeLists.txt  float16.hpp
cpp/shared/gecko_sdk/: CMakeLists.txt  README.md  gecko_sdk_options.cmake  patch_gecko_sdk.py
cpp/shared/gecko_sdk/audio_feature_generation/: CMakeLists.txt  README.md  data_dumper_arm.cc  data_dumper_pc.cc  sl_ml_audio_feature_generation.c  sl_ml_audio_feature_generation.h  sl_ml_audio_feature_generation_config.cc  sl_ml_audio_feature_generation_config.h  sl_ml_audio_feature_generation_init.c
cpp/shared/gecko_sdk/clib_wrappers/: CMakeLists.txt  clib_wrappers.c
cpp/shared/gecko_sdk/cmake/: app_bluetooth.cmake  bluetooth.cmake  button.cmake  device_init_service.cmake  dmadrv.cmake  efm32gg11b.cmake  efr32mg12p.cmake  efr32mg24.cmake  emlib.cmake  freertos.cmake  gpiointerrupt.cmake  hardware_board.cmake  hfxo_manager_service.cmake  iostream_service.cmake  leddrv.cmake  mbedtls.cmake  memory_manager.cmake  mic.cmake  mx25_flash_shutdown.cmake  nvm3.cmake  platform_common.cmake  platform_peripheral.cmake  power_manager_service.cmake  psa_crypto.cmake  rail.cmake  sleeptimer_service.cmake  system_service.cmake  udelay_service.cmake
cpp/shared/gecko_sdk/simplicity_studio/: apps.xml  yzlite_arducam.slcc  yzlite_audio_feature_generation.slcc  yzlite_cmsis_dsp_q15.slcc  yzlite_cmsis_nn.slcc  yzlite_cpputils.slcc  yzlite_dynamic_buffer.slcc  yzlite_fingerprint_reader.slcc  yzlite_float16.slcc  yzlite_jlink_stream.slcc  yzlite_logging.slcc  yzlite_mic_i2s_driver.slcc  yzlite_microfrontend.slcc  yzlite_microsecond_timer.slcc  yzlite_msgpack.slcc  yzlite_profiling.slcc  yzlite_str_util.slcc  yzlite_tflite_micro.slcc  yzlite_tflite_micro_cmsis_kernels.slcc  yzlite_tflite_micro_flatbuffers.slcc  yzlite_tflite_micro_gemmlowp.slcc  yzlite_tflite_micro_model.slcc  yzlite_tflite_micro_mvp_kernels.slcc  yzlite_tflite_micro_reference_kernels.slcc  yzlite_tflite_micro_ruy.slcc  yzlite_tflite_model_parameters.slcc
cpp/shared/gecko_sdk/tflite_micro_mvp_kernels/: CMakeLists.txt  README.md  tflite_micro_mvp_accelerator.cc
cpp/shared/gecko_sdk/tflite_micro_mvp_kernels/kernels/: add.cc  conv.cc  debug_log.cc  (+4 more)
cpp/shared/jlink_stream/: CMakeLists.txt
cpp/shared/jlink_stream/jlink_stream/: jlink_stream.cc  jlink_stream.hpp  jlink_stream_command.cc  jlink_stream_command.hpp  jlink_stream_interface.hpp  jlink_stream_internal.cc  jlink_stream_internal.hpp
cpp/shared/logging/: CMakeLists.txt
cpp/shared/logging/logging/: default_writer.cc  logger.cc  logger.hpp  logging.cc  logging.hpp
cpp/shared/microfrontend/: CMakeLists.txt  README.md
cpp/shared/microfrontend/example/: CMakeLists.txt
cpp/shared/microfrontend/microfrontend/: sl_ml_fft.cc  sl_ml_fft.h
cpp/shared/microfrontend/tests/: CMakeLists.txt  README.md  fft_test.cc  filterbank_test.cc  frontend_test.cc  log_scale_test.cc  main.cc  noise_reduction_test.cc  pcan_gain_control_test.cc  spectrogram_test.cc  window_test.cc
cpp/shared/minimp3/: CMakeLists.txt  README.md
cpp/shared/msgpack/: CMakeLists.txt  msgpack.h  msgpack.hpp
cpp/shared/msgpack/src/: msgpack.c  msgpack_buffered_writer.c  msgpack_deserialize.c  msgpack_internal.h  msgpack_serialize.c
cpp/shared/profiling/: CMakeLists.txt
cpp/shared/profiling/profiling/: profiler.cc  profiler.hpp  profiler_fullname.cc  profiler_fullname.hpp  profiling.cc  profiling.hpp
cpp/shared/pybind11/: CMakeLists.txt  pybind11_helper.hpp
cpp/shared/tflite_micro_model/: CMakeLists.txt
cpp/shared/tflite_micro_model/tflite_micro_model/: tflite_micro_model.cc  tflite_micro_model.hpp  tflite_micro_model_details.cc  tflite_micro_model_details.hpp  tflite_micro_tensor.cc  tflite_micro_tensor.hpp  tflite_micro_utils.hpp
cpp/shared/uart_stream/: CMakeLists.txt  uart_stream.hpp  uart_stream_interface.h
cpp/shared/uart_stream/src/: uart_stream.cc  uart_stream_internal.h
(+1482 files in other folders)
